# easyrpc

./: Cargo.toml
src/: command.rs  dispatch.rs  error.rs  lib.rs  registry.rs  transport.rs
src/transport/: tokio_io.rs  tokio_tcp.rs
src/transport/tokio_io/: iroh.rs  tcp.rs
tests/: global_rpc_test.rs
